# odesli-api-python

./: .gitignore  README.md  pyproject.toml
SongLinkAPI/: __init__.py
SongLinkAPI/types/: __init__.py
SongLinkAPI/types/exceptions/: __init__.py
odesli_api/: __init__.py
odesli_api/types/enums/: __init__.py  api_provider.py  entity_type.py  platform_name.py
odesli_api/types/exceptions/: __init__.py  api_exception.py  entity_not_found.py  too_many_requests.py
odesli_api/types/models/: __init__.py  api_response.py  entity_unique_id.py  platform.py
songlink_api/: __init__.py
