[tool.poetry]
name = "songlink_api"
version = "0.2.1"
description = ""
authors = ["ульба <ulbwa@icloud.com>"]
readme = "README.md"
packages = [{include = "songlink_api"}]

[tool.poetry.dependencies]
python = "^3.10"
orjson = "^3.8.10"
pydantic = "^1.10.7"
aiohttp-client-cache = "^0.8.1"
aiofiles = "^23.1.0"
aiosqlite = "^0.19.0"
aiohttp-proxy = "^0.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
